Make sure canvas and image covers take the same space

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -77,7 +77,7 @@
   height: 256px
 
   .missing-cover
-    display: block
+    display: inline-block
 
 // preview card for album or artist listings
 .preview-card
